# theBrain

./: .gitignore  LICENSE  LogicFor1.1.py  LogicFor1.5.py  README.md  logicFor1.3.py  logicsFor1.4.py  pyproject.toml
config/: config.py
db/: test.ipynb
src/: ContractAgent.py  DocumentOrganizationAgent.py  LogicFor1.1.py  ScheduleMeeting.py  SchedulingAgent.py  TaskCreation_And_Progress_report_Agent.py  logicFor1.3.py  logicsFor1.4.py
src/CotractAgent/: main.py
src/CotractAgent/app/: api.py  core.py
src/CotractAgent/models/: schemas.py
src/FullGraph/: requirements.txt
src/FullGraph/agents/: TaskCreationAgent.py  docOrganization.py  document_tool.py  meeting_tool.py  task_tool.py
src/FullGraph/agents/codeUtils/: text_extractor.py
src/FullGraph/graph/: main_graph.py
src/Full_smart_Graph/: README.md  app.py  requirements.txt
src/Full_smart_Graph/agents/: TaskCreationAgent.py  docOrganization.py  document_tool.py  task_tool.py  testSmartScheduale.py
src/Full_smart_Graph/agents/codeUtils/: send_mail.py  task_creation_and_report_tools.py  text_extractor.py  trello.py
src/Full_smart_Graph/graph/: main_graph.py
src/Full_smart_Graph/utils/: state.py
src/Full_smart_Graph/venv311/: pyvenv.cfg
src/Full_smart_Graph/venv311/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
src/LangGraph/: testDocumentOrganization  testGraph.py  testSmartScheduale.py
src/SmartGraph/agents/: contract_tool.py
src/SmartGraph/graph/: main_graph.py
src/assests/: datatest.xlsx
src/assests/data/: test.ods  test.xlsx
src/extract_everything/: demo.py  main.py
src/meeting_agent_project/: main.py  requirements.txt
src/meeting_agent_project/app/: api.py  core.py
src/meeting_agent_project/models/: schemas.py
src/utils/: image_handler.py  llm_api.py  paper_detection.py  remove_background.py  send_mail.py  send_notifications.py  seq_pipline.py  task_creation_and_report_tools.py  text_extractor.py  text_handler.py  type_checker.py
test/: Test_api_contract.py  Test_contract_generator.py  document_organization_testing.py  extract_everything.py  send_mail_test.py  test_api_scheduler.py  test_scheduler.py
